<resources>
    <string name="app_name">Headwind</string>
    <string name="extension_name">headwind</string>
    <string name="headwind">Headwind</string>
    <string name="headwind_description">Current headwind direction and headwind speed</string>
    <string name="tailwind_and_speed">Speed and tailwind</string>
    <string name="tailwind_and_speed_description">Current rider speed and tailwind</string>
    <string name="relativeHumidity">Humidity</string>
    <string name="relativeHumidity_description">Relative humidity in percent</string>
    <string name="cloudCover">Cloud cover</string>
    <string name="cloudCover_description">Current cloud cover in percent</string>
    <string name="windSpeed">Wind speed</string>
    <string name="windSpeed_description">Current wind speed in configured unit</string>
    <string name="windGusts">Wind gusts</string>
    <string name="windGusts_description">Current wind gust speed in configured unit</string>
    <string name="windDirection">Absolute wind direction</string>
    <string name="windDirection_description">Current wind direction</string>
    <string name="precipitation">Rainfall</string>
    <string name="precipitation_description">Current precipitation (rainfall / snowfall)</string>
    <string name="surfacePressure">Surface pressure</string>
    <string name="surfacePressure_description">Atmospheric pressure at surface in configured unit</string>
    <string name="sealevelPressure">Sealevel pressure</string>
    <string name="sealevelPressure_description">Atmospheric pressure at sea level in configured unit</string>
    <string name="weather">Weather</string>
    <string name="weather_description">Current weather conditions</string>
    <string name="weather_forecast">Weather Forecast</string>
    <string name="weather_forecast_description">Current hourly weather forecast</string>
    <string name="headwind_speed">Headwind speed</string>
    <string name="headwind_speed_description">Current headwind speed</string>
    <string name="temperature">Temperature</string>
    <string name="temperature_description">Current temperature in configured unit</string>
    <string name="userwind_speed_description">Current headwind or wind speed based on user setting</string>
    <string name="userwind_speed">Set wind speed</string>
</resources>