<?xml version="1.0" encoding="utf-8"?>
<ExtensionInfo
    displayName="@string/extension_name"
    icon="@drawable/wind"
    id="karoo-headwind"
    scansDevices="false">
    <DataType
        description="@string/headwind_description"
        displayName="@string/headwind"
        graphical="true"
        icon="@drawable/wind"
        typeId="headwind" />

    <DataType
        description="@string/tailwind_and_speed_description"
        displayName="@string/tailwind_and_speed"
        graphical="true"
        icon="@drawable/ic_launcher"
        typeId="tailwind-and-ride-speed" />

    <DataType
        description="@string/weather_description"
        displayName="@string/weather"
        graphical="true"
        icon="@drawable/wind"
        typeId="weather" />

    <DataType
        description="@string/weather_forecast_description"
        displayName="@string/weather_forecast"
        graphical="true"
        icon="@drawable/wind"
        typeId="weatherForecast" />

    <DataType
        description="@string/headwind_speed_description"
        displayName="@string/headwind_speed"
        graphical="false"
        icon="@drawable/wind"
        typeId="headwindSpeed" />

    <DataType
        description="@string/relativeHumidity_description"
        displayName="@string/relativeHumidity"
        graphical="false"
        icon="@drawable/ic_water"
        typeId="relativeHumidity" />

    <DataType
        description="@string/cloudCover_description"
        displayName="@string/cloudCover"
        graphical="false"
        icon="@drawable/ic_cloud"
        typeId="cloudCover" />

    <DataType
        description="@string/windSpeed_description"
        displayName="@string/windSpeed"
        graphical="false"
        icon="@drawable/wind"
        typeId="windSpeed" />

    <DataType
        description="@string/windGusts_description"
        displayName="@string/windGusts"
        graphical="false"
        icon="@drawable/wind"
        typeId="windGusts" />

    <DataType
        description="@string/windDirection_description"
        displayName="@string/windDirection"
        graphical="true"
        icon="@drawable/wind"
        typeId="windDirection" />

    <DataType
        description="@string/precipitation_description"
        displayName="@string/precipitation"
        graphical="false"
        icon="@drawable/ic_water"
        typeId="precipitation" />

    <DataType
        description="@string/surfacePressure_description"
        displayName="@string/surfacePressure"
        graphical="false"
        icon="@drawable/ic_cloud"
        typeId="surfacePressure" />

    <DataType
        description="@string/temperature_description"
        displayName="@string/temperature"
        graphical="false"
        icon="@drawable/thermometer"
        typeId="temperature" />
</ExtensionInfo>
